Edit and fix the overlapiness of the past event card

--- a/style/style.scss
+++ b/style/style.scss
@@ -50,7 +50,6 @@ header {
     right: 0;
     left: 0;
     background: var(--white);
-    z-index: 1000;
 
     .navbar-nav {
       display: none;
@@ -59,8 +58,8 @@ header {
     ul {
       display: flex;
       flex-direction: column;
-      gap: 1.5rem;
-      padding: 2rem 5rem 0rem;
+      gap: 2rem;
+      padding: 2rem 2rem 0rem 5rem;
 
       li:nth-child(1) {
         align-self: flex-end;
@@ -85,6 +84,7 @@ header {
 
       a:hover:focus {
         background: var(--primary);
+        color: var(--white);
       }
     }
   }
@@ -111,7 +111,7 @@ header {
       background: linear-gradient(210deg, var(--primary), rgb(244, 111, 23));
       background-clip: text;
       -webkit-text-fill-color: transparent;
-      letter-spacing: 0.4rem;
+      letter-spacing: 0.04rem;
       line-height: 2rem;
       font-weight: 900;
     }
@@ -306,7 +306,6 @@ header {
         letter-spacing: 0.04rem;
         font-size: 0.7rem;
         margin-top: 0.4rem;
-        // opacity: 0.8;
       }
     }
   }
@@ -390,10 +389,11 @@ footer {
     background: linear-gradient(210deg, var(--primary), rgb(244, 111, 23));
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    letter-spacing: 0.4rem;
+    letter-spacing: 0.04rem;
     line-height: 2rem;
     font-weight: 900;
     margin-top: 2rem;
+    text-align: center;
   }
 
   h6 {
@@ -440,7 +440,7 @@ footer {
 
 .edition {
   background: var(--white);
-  padding: 0.5rem;
+  padding: 1rem;
 
   h2 {
     text-align: center;
@@ -461,54 +461,46 @@ footer {
       padding: 1rem;
     }
   }
-
-  ul {
-    display: grid;
-    grid-template-columns: 1fr;
+  .past{
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
     justify-content: center;
-    gap: 1rem;
-    padding: 1rem;
-
+    
     .first {
-      background-image: url(../images/bg-6.jpg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-    }
-
-    .second {
-      background-image: url(../images/bg-3.jpg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-    }
-
-    li {
-      color: var(--white);
-      text-align: center;
-      padding: 4rem 0rem;
       position: relative;
-
+      border-radius: 1rem;
+      overflow: hidden;
+  
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+      
       .color-overlay {
         width: 100%;
         height: 100%;
-        background: #f00;
+        display: grid;
+        place-content: center;
+        background: #ff00003a;
         position: absolute;
         top: 0;
-        opacity: 0.4;
-        z-index: 0;
+        left: 0;
+        color:white;
+        text-align: center;
 
-      }
+        h3 {
+          font-size: 2rem;
+        }
 
-      h3 {
-        font-size: 1.1rem;
-        margin-bottom: 0.5rem;
-        z-index: 0;
-      }
-
-      p {
-        font-size: 0.8rem;
-        z-index: 0;
+        p {
+          font-size: .8rem;
+          background: rgba(0, 0, 0, 0.432);
+          border-radius: .4rem;
+          padding: .4rem;
+          
+        }
       }
     }
   }
@@ -524,6 +516,10 @@ footer {
 
   .pad {
     padding: 0rem 13%;
+  }
+
+  .active {
+
   }
 
   header {
@@ -567,7 +563,6 @@ footer {
     nav {
       grid-column:2/3 ;
       grid-row:2/3 ;
-      // visibility: visible;
       display: block;
       width: 100%;
       height: 100%;
@@ -590,7 +585,7 @@ footer {
 
 
 
-        li:nth-child(7) {
+        li:nth-child(8) {
           align-self: flex-end;
           padding: 0rem .5rem;
         }
@@ -599,7 +594,6 @@ footer {
           border: 2px var(--primary) solid;
           background: inherit;
           width: auto;
-          // padding: .4rem .4rem;
 
           a {
             color: var(--dark);
@@ -612,7 +606,6 @@ footer {
         }
 
         a:hover {
-          // background: var(--primary);
           color: var(--primary);
         }
       }
@@ -627,7 +620,7 @@ footer {
 }
 
   .headline {
-    // background-image: url(../images/background.png);
+    background-image: url(../images/bkgrnd.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
@@ -638,13 +631,17 @@ footer {
       gap: 1em;
       padding: 5rem 1rem 6rem;
 
+      h6 {
+        font-size: 1.5rem;
+      }
+
       h1 {
-        padding: 1rem 0rem 0rem;
+        padding: 0rem 0rem 0rem;
         background: linear-gradient(210deg, var(--primary), rgb(244, 111, 23));
         background-clip: text;
         -webkit-text-fill-color: transparent;
         letter-spacing: 0.05rem;
-        line-height: 4rem;
+        line-height: 3rem;
         font-weight: 900;
         font-size: 3rem;
       }
@@ -654,7 +651,8 @@ footer {
       }
     
       h3 {
-        width: 70%;
+        width: 65%;
+
       }
     }
   }
@@ -827,7 +825,6 @@ footer {
 
   footer {
     padding: 2rem 13%;
-    
   
     img {
       object-fit: cover;
@@ -846,14 +843,25 @@ footer {
     }
   }
 
+  .main-footer {
+    background: var(--white);
+    color: var(--dark);
+
+  }
+
   // ABOUT PAGE STYLES
+  nav {
+    .home-link {
+      display: none;
+    }
+  }
   .headline-a {
     display: flex;
     flex-direction: column;
     gap: 1em;
     padding: 0rem 13%;
     background-image: url(../images/about-dektop.png);
-    background-size: 90% 25vh;
+    background-size: contain;
     margin: 0 auto;
     background-repeat: no-repeat;
     background-position: 2rem 3rem;
@@ -909,7 +917,7 @@ footer {
   }
 
   .edition {
-    padding: 1rem 13%;
+    padding: 2rem 13%;
     h2 {
       text-align: center;
       padding: 1rem 0rem;
@@ -929,30 +937,36 @@ footer {
         padding: 1rem;
       }
     }
+    
+    .past{
+      flex-direction: row;
+    
+      .first {
+        width:50%;
+        img {
+          object-fit: cover;
+        }
+        
+        .color-overlay {
+          h3 {
+            font-size: 2rem;
+          }
   
-    ul {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 250px;
-      justify-content: center;
-      align-items: center;
-      gap: 1rem;
-      padding: 1rem;
-  
-      li {
-        h3 {
-          font-size: 2rem;
-          margin-bottom: 0.5rem;
-          z-index: 1;
+          p {
+            font-size: .8rem;
+            background: rgba(0, 0, 0, 0.432);
+            border-radius: .4rem;
+            padding: .4rem;
+            
+          }
         }
       }
     }
   }
 
-  footer {
+  .footer-about {
     color: var(--white);
     background: var(--dark);
     
   }
-
 }
